[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Dialog Box/courbd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Command Box/CommandLabel.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 1.0

[node name="CommandLabel" type="RichTextLabel"]
margin_right = 137.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 19 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/normal_font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "> "
text = "> "
fit_content_height = true
scroll_active = false
script = ExtResource( 2 )

[connection signal="gui_input" from="." to="." method="_on_CommandLabel_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_CommandLabel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CommandLabel_mouse_exited"]
